trying to fix jumping background on section offer2

--- a/sass/main2.scss
+++ b/sass/main2.scss
@@ -486,7 +486,8 @@ section.contact {
 section.offer {
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../images/nyc-5323170_1920.jpg) center center;
     background-attachment: fixed;
-
+    background-size: cover;
+    background-repeat: no-repeat;
 
     .moving {
         .content {
